Renovated index and added projects to header and footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!--
 <div id="home" class="page-content wc-container">
 	<div class="posts">
   		{% for post in site.posts limit:10 %}
@@ -27,3 +28,5 @@ layout: default
 		<div class="column-full"><a href="{{ site.baseurl }}/blog/">Blog archive</a></div>
 	</div>
 </div>
+-->
+Hi! I'm Evamvid Sharma. This site is under construction but soon it will be my ~~personal soapbox~~ blog. Feel free to have a look around (links above and below) or hit me up anywhere you see fit (links below).
