Added page content class to div

--- a/index.html
+++ b/index.html
@@ -29,4 +29,6 @@ layout: default
 	</div>
 </div>
 -->
+<div id="home" class="page-content wc-container">
 <p>Hi! I'm Evamvid Sharma. This site is under construction but soon it will be my <del>personal soapbox</del> blog. Feel free to have a look around (links above and below) or hit me up anywhere you see fit (links below).</p>
+</div>
