--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@ permalink: 404.html
   <h3>404 Page Not Found</h3>
   <h4>The page you were looking for is not found.</h4>
   <p>Sorry, we've misplaced that URL or it's pointing to something that 
-  	doesn't exist. <a href="{{ site.baseurl }}">Head back hom
+  	doesn't exist. <a href="{{ site.baseurl }}">Head back home
   	to try finding it again.</p>
 </div>
